--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - "8080:8080"
       - "8081:8081" 
     environment:
-      - VIRTUAL_HOST=web.local
+      - VIRTUAL_HOST=localhost
       - VIRTUAL_PORT=8080
       - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
