--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 services:
-  phdmanager.proxy:
-    image: nginxproxy/nginx-proxy
+  phdmanager.traefik:
+    image: traefik:v2.10.1
+    command:
+      - "--api.insecure=true"
+      - "--providers.docker=true"
     ports:
       - "80:80"
-      - "443:443" 
+      - "8082:8080"
     volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-    depends_on:
-      - phdmanager.web
-      - phdmanager.api
+      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - app-network
 
@@ -29,10 +29,9 @@ services:
     ports:
       - "8080:8080"
       - "8081:8081"
-    environment:
-      - VIRTUAL_HOST=web.local
-      - VIRTUAL_PORT=8080
-      - ASPNETCORE_ENVIRONMENT=Development
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.webapp.rule=Host(`localhost`)
     depends_on:
       - phdmanager.api
     networks:
@@ -46,10 +45,6 @@ services:
     ports:
       - "5000:8080"
       - "5001:8081"
-    environment:
-      - VIRTUAL_HOST=api.local
-      - VIRTUAL_PORT=8080
-      - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
       - phdmanager.db
     networks:
