--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   phdmanager.traefik:
-    image: traefik:v2.10.1
+    image: traefik:v3.1.4
     command:
       - "--api.insecure=true"
       - "--providers.docker=true"
@@ -13,13 +13,15 @@ services:
       - app-network
 
   phdmanager.db:
-    image: mongo
+    image: postgres:17.0
+    environment:
+      POSTGRES_PASSWORD: phdmanager
+      POSTGRES_DB: phdmanager
+      PGDATA: /var/lib/postgresql/data
     ports:
-      - "27018:27017"
+      - "5432:5432"
     networks:
       - app-network
-    volumes:
-      - db-data:/data/db
 
   phdmanager.web:
     image: ${DOCKER_REGISTRY-}phdmanagerweb
@@ -53,7 +55,3 @@ services:
 networks:
   app-network:
     driver: bridge
-
-volumes:
-  db-data:
-    driver: local
