--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./docker/postgres/data:/var/lib/postgresql/data
-      - ./docker/postgres/init:/docker-entrypoint-initdb.d
+      - db-data:/var/lib/postgresql/data
     networks:
       - app-network
 
@@ -53,6 +52,9 @@ services:
       - phdmanager.db
     networks:
       - app-network
+
+volumes:
+  db-data:
 
 networks:
   app-network:
